<resources>
    <string name="app_name">Compose Submission</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_profile">Profile</string>
    <string name="price">Rp. %d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : Rp. %d</string>
    <string name="total_order">Total pesanan : Rp. %d</string>
    <string name="back">Back</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="placeholder_search">Cari kopi pilihanmu!</string>
    <string name="share_message">Hey, I have add %1$d coffe in Coffee with total Rp. %2$d. Do you want too?</string>
    <string name="profile_name">Arlan Leon Allacsta</string>
    <string name="profile_email">arlanleonallacsta20@gmail.com</string>
    <string name="data_empty">There is no coffee data</string>
    <string name="required_point">Rp. %d</string>
</resources>