...
) {
    LazyVerticalGrid(
        columns = GridCells.Adaptive(140.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("CoffeeList")
    ) {
        items(orderCoffee) { data ->
            CoffeeItem(
                image = data.coffee.image,
                title = data.coffee.title,
                requiredPoint = data.coffee.requiredPoint,
...
